--- a/tex/EtudeExperimentale.tex
+++ b/tex/EtudeExperimentale.tex
@@ -7,6 +7,8 @@ Lors des expériences réalisées lors de la caractérisation du réfrigérateur
 \subsection{\'Etude des performances}
 Pour commencer cette étude expérimentale, une vue d'ensemble est adoptée. En faisant abstraction de la distribution de température non encore expliquée, des quantités telles que la capacité de refroidissement de l'échangeur froid $Q_f$ et la chaleur extraite par l'échangeur ambiant $Q_a$, le coefficient de performance $\COP=Q_f/W_e$ rapporté au coefficient de performance de Carnot $\COP_{\sf carnot} = T_f/(T_c-T_f)$ ou les température froide $T_f$ et ambiante $T_a$ sont relevées. Pour cette partie de l'étude, plusieurs hypothèses sont proposées : les températures sont supposées constantes sur la section du noyau, et les échangeurs sont considérés parfaits avec un flux thermique homogène sur la section. 
 
+Dans cette étude, les quatre orientations définies sur la figure~\ref{fig:OrientationCore} sont tour à tour mises en place, et deux charges thermiques sont appliquées à l'échangeur froid pour chacune d'entre elles. En suivant le protocole 
+
 \subsection{Distribution des températures}
 \subsubsection{Dans la cavité conique entre la source acoustique principale et le noyau thermoacoustique}
 
