--- a/tex/Perspectives.tex
+++ b/tex/Perspectives.tex
@@ -23,7 +23,7 @@
 
 \section{Expérimentations supplémentaires}
 
-\subsection{Ajout d'une charge thermique à l'échangeur froid}
+\subsection{\'Etude de la conduction par les parois du noyau thermoacoustique}
 
 
 \section{\'Electroacoustique}
